# server/worldmonitor/economic/v1/handler.ts
@@ -10,6 +10,7 @@ import { getBisPolicyRates } from './get-bis-policy-rates';
 import { getBisExchangeRates } from './get-bis-exchange-rates';
 import { getBisCredit } from './get-bis-credit';
 import { listGroceryBasketPrices } from './list-grocery-basket-prices';
+import { listBigMacPrices } from './list-bigmac-prices';
 
 export const economicHandler: EconomicServiceHandler = {
   getFredSeries,
@@ -22,4 +23,5 @@ export const economicHandler: EconomicServiceHandler = {
   getBisExchangeRates,
   getBisCredit,
   listGroceryBasketPrices,
+  listBigMacPrices,
 };
